--- a/cardgame/client/src/app/app.component.html
+++ b/cardgame/client/src/app/app.component.html
@@ -3,10 +3,18 @@
     <div *ngIf="winner">{{winner == playerId ? "You won!" : "You lost..." }}</div>
     <button (click)="pushButton()">Draw</button>
     <div cdkDropListGroup>
-        <div *ngIf="centercard" class="card" cdkDropList (cdkDropListDropped)="drop_center($event)" [ngStyle]="{'background-color': getColor(centercard.color, 0.3)}">{{centercard.type}}</div>
+        <div *ngIf="centercard" class="card" cdkDropList (cdkDropListDropped)="drop_center($event)" [ngStyle]="{'background-color': getColor(centercard.color, 0.3)}">{{getDisplay(centercard.type)}}</div>
         <div cdkDropListOrientation="horizontal" class="cardcontainer" cdkDropList (cdkDropListDropped)="drop($event)">
             <div class="card" *ngFor="let c of cards" cdkDrag  [ngStyle]="{'background-color': getColor(c.color, 0.3)}">{{getDisplay(c.type)}}</div>
         </div>
+    </div>
+    <div>Plus 4 Color:
+        <select [(ngModel)]="plus4color">
+            <option value="0">Red</option>
+            <option value="1">Green</option>
+            <option value="2">Blue</option>
+            <option value="3">Yellow</option>
+        </select>
     </div>
 </div>
 <!-- [cdkDropListData]="cards"  [cdkDragData]="c" -->
