--- a/cardgame/client/src/app/app.component.css
+++ b/cardgame/client/src/app/app.component.css
@@ -18,9 +18,22 @@ button {
     overflow: hidden;
 }
 
+.cardcontainercenter {
+    width: 300px;
+    max-width: 100%;
+    min-height: 100px;
+    display: flex;
+    flex-direction: row;
+    background: white;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+
 .cdk-drag-preview {
     opacity: 0;
 }
+
 
 .card {
     padding: 20px 10px;
