--- a/cardgame/client/src/app/app.component.css
+++ b/cardgame/client/src/app/app.component.css
@@ -7,7 +7,34 @@ button {
     background: green;
 }
 
+.seperator span {
+    margin-left:100px;
+}
+
+button {
+    width: 50px;
+    height: 50px;
+}
+
+.everything > * {
+    justify-content: center;
+    text-align: center;
+}
+
 .cardcontainer {
+    width: 1000px;
+    max-width: 100%;
+    min-height: 100px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    top: 20px;
+    background: white;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.cardcontainercenter {
     width: 1000px;
     max-width: 100%;
     min-height: 100px;
@@ -15,18 +42,13 @@ button {
     flex-direction: row;
     background: white;
     border-radius: 4px;
+    border-spacing: 4px;
     overflow: hidden;
 }
 
-.cardcontainercenter {
-    width: 300px;
-    max-width: 100%;
-    min-height: 100px;
-    display: flex;
-    flex-direction: row;
-    background: white;
-    border-radius: 4px;
-    overflow: hidden;
+.cardcontainercenter > .card:not(:first-child) {
+    position: relative;
+    left: 20px;
 }
 
 
@@ -41,11 +63,15 @@ button {
     align-items: normal;
     justify-content: space-between;
     outline: black solid 1px;
+    border-style: solid;
     box-sizing: border-box;
     cursor: move;
     background: white;
     font-size: 14px;
-    flex-grow: 0;
+    flex-grow: 1px;
     flex-basis: 66px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
