--- a/cardgame/client/src/app/app.component.html
+++ b/cardgame/client/src/app/app.component.html
@@ -1,22 +1,31 @@
-<div>
-    <div *ngIf="currentTurn==playerId">Your turn!</div>
-    <div *ngIf="winner">{{winner == playerId ? "You won!" : "You lost..." }}</div>
-    <button (click)="pushButton()">Draw</button>
-    <div cdkDropListGroup>
+<button *ngIf="!playerId" (click)="joinGame()">Join game</button>
+<input [(ngModel)]="changeName($event)"/>
+<div *ngIf="playerId">
+    <h1 *ngIf="currentTurn==playerId">Your turn!</h1>
+    <div style="text-align: center" *ngIf="winner">{{winner == playerId ? "You won!" : "You lost..." }}</div>
+    
+    <div class="everything" cdkDropListGroup>
+
         <span class="cardcontainercenter">
             <div *ngFor="let centercard of centercards" class="card" cdkDropList (cdkDropListDropped)="drop_center($event)" [ngStyle]="{'background-color': getColor(centercard.color, 0.3)}">{{getDisplay(centercard.type)}}</div>
         </span>
+        <div style="text-align: center">
+            <button (click)="pushButton()">Draw</button>
+            <div>Plus 4 Color:
+                    <select [(ngModel)]="plus4color">
+                        <option value="0">Red</option>
+                        <option value="1">Green</option>
+                        <option value="2">Blue</option>
+                        <option value="3">Yellow</option>
+                    </select>
+            </div>
+        </div>
         <div cdkDropListOrientation="horizontal" class="cardcontainer" cdkDropList (cdkDropListDropped)="drop($event)">
             <div class="card" *ngFor="let c of cards" cdkDrag  [ngStyle]="{'background-color': getColor(c.color, 0.3)}">{{getDisplay(c.type)}}</div>
         </div>
+
+
     </div>
-    <div>Plus 4 Color:
-        <select [(ngModel)]="plus4color">
-            <option value="0">Red</option>
-            <option value="1">Green</option>
-            <option value="2">Blue</option>
-            <option value="3">Yellow</option>
-        </select>
-    </div>
+
 </div>
 <!-- [cdkDropListData]="cards"  [cdkDragData]="c" -->
