--- a/cardgame/client/src/app/app.component.html
+++ b/cardgame/client/src/app/app.component.html
@@ -1,11 +1,12 @@
 <button *ngIf="!playerId" (click)="joinGame()">Join game</button>
-<input [(ngModel)]="changeName($event)"/>
+<input [ngModel]="this.playerName" (ngModelChange)="changeName($event)"/>
 <div *ngIf="playerId">
     <h1 *ngIf="currentTurn==playerId">Your turn!</h1>
     <div style="text-align: center" *ngIf="winner">{{winner == playerId ? "You won!" : "You lost..." }}</div>
-    
+    <div>
+        <span *ngFor="let a of playerdata">{{a.name}}:{{a.cards.length}}, </span>
+    </div>
     <div class="everything" cdkDropListGroup>
-
         <span class="cardcontainercenter">
             <div *ngFor="let centercard of centercards" class="card" cdkDropList (cdkDropListDropped)="drop_center($event)" [ngStyle]="{'background-color': getColor(centercard.color, 0.3)}">{{getDisplay(centercard.type)}}</div>
         </span>
@@ -23,8 +24,6 @@
         <div cdkDropListOrientation="horizontal" class="cardcontainer" cdkDropList (cdkDropListDropped)="drop($event)">
             <div class="card" *ngFor="let c of cards" cdkDrag  [ngStyle]="{'background-color': getColor(c.color, 0.3)}">{{getDisplay(c.type)}}</div>
         </div>
-
-
     </div>
 
 </div>
